# VisionCore

./: .gitignore  Cargo.toml  README.md  deploy.sh
.cargo/: config.toml
locinet/: Cargo.toml  README.md  build.rs
locinet/src/: blazeface.rs  blazefast.rs  lib.rs  utils.rs
visioncore/: Cargo.toml  README.md  vision_core_sm
visioncore-plugin/: Cargo.toml  README.md
visioncore-plugin/.cargo/: config.toml
visioncore-plugin/src/: lib.rs
visioncore/src/: main.rs
