[package]
name = "visioncore"
version = "0.1.0"
edition = "2021"

[dependencies]
nokhwa = { version = "0.10.7", features = ["input-native"] }
anyhow = "1.0"
zmq = "0.10.0"
serde_json = "1.0"
visioncore-plugin = { path = "../visioncore-plugin" }
locinet = { path = "../locinet" }  # Add locinet as a dependency