[package]
name = "visioncore"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
zmq = "0.10.0"
serde_json = "1.0"
locinet = { path = "../locinet" }  # Add locinet as a dependency
visioncore-plugin = { path = "../visioncore-plugin" }

nokhwa = { version = "0.10.7", features = ["input-native"], optional = true }
gstreamer = { version = "0.23.5", optional = true }
gstreamer-app = { version = "0.23.5", optional = true }

[features]
default = ["nokhwa"]
csi = ["gstreamer", "gstreamer-app"]
